--- a/WEEK2/CSS/styles.css
+++ b/WEEK2/CSS/styles.css
@@ -93,20 +93,106 @@ body {
     padding: 10px;
     border: 3px solid #73AD21;
   }
-  
   .div2 {
     padding: 10px;
     border: 3px solid red;
   }
-  
   .div3 {
     float: left;
     padding: 10px;  
     border: 3px solid #73AD21;
   }
-  
   .div4 {
     padding: 10px;
     border: 3px solid red;
     clear: left;
+  }
+  div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    width: 180px;
+display: inline-block;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid red;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  .form-div{
+    width: 50%;
+    margin: auto;
+  
+  }
+  input[type=text],input[type=email], input[type=password], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+ 
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    /* resize: none; */
+  }
+
+  .search-bar{
+    width: 10%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    transition: width 0.4s ease-in-out;
+  }
+ 
+.search-bar:focus {
+  width: 100%;
+}
+  select {
+    width: 100%;
+    margin-top: 10px;
+    padding: 12px 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    /* clear: both; */
   }
